<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:title="@string/nasa_pictures"
        android:orderInCategory="1"
        android:icon="@drawable/photos"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />


    <item
        android:id="@+id/item2"
        android:title="@string/nasa_home_page"
        android:orderInCategory="2"
        android:icon="@drawable/nasa"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item3"
        android:title="@string/help"
        android:orderInCategory="3"
        android:icon="@drawable/ic_launcher_foreground"
        app:showAsAction="always"/>


</menu>