<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/actionHome"
        android:orderInCategory="1"
        android:icon="@drawable/home_"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/DatePicker"
        android:title="@string/actionDatePicker"
        android:orderInCategory="2"
        android:icon="@drawable/calendar"
        app:showAsAction="always"/>


    <item
        android:id="@+id/Help"
        android:title="@string/help"
        android:orderInCategory="3"
        android:icon="@drawable/ic_launcher_foreground"
        app:showAsAction="always"/>

</menu>